--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ h3 {
     text-align: center;
     padding: 25px;
 }
-/* allowance */
+/* money boxes */
 .allowance, .purchases {
     font-size: 100px;
     color: black;
@@ -19,6 +19,18 @@ h3 {
     border-width: 3px;
     margin: 15px;
     padding-top: 2px;
+}
+/* game box */
+.tally {
+    font-size: 15px;
+    color: black;
+    background-color: #fafafa;
+    height: 100px;
+    width: 200px;
+    border-style: solid;
+    border-width: 1px;
+    margin: 15px;
+    padding: 2px 0px 2px 3px;
 }
 /* rocks */
 .jewel_box {
